# librem-ec-remap

./: .gitlab-ci.yml  Makefile
src/board/purism/common/: acpi.c  battery.c  common.mk  kbled.c  kbscan.c  lid.c  main.c  peci.c  power.c  pwm.c  scratch.c  smfi.c  stdio.c
src/board/purism/common/charger/: bq24715.c
src/board/purism/common/include/board/: battery.h  board.h  peci.h  power.h
src/board/purism/common/include/charger/: bq24715.h
src/board/purism/common/kbled/: white_pwm.c
src/board/purism/librem_14/: board.c  board.mk  board_battery.c  gpio.c
src/board/purism/librem_14/include/board/: gpio.h
src/board/purism/librem_14/keymap/: default.c  gkelly.c
src/ec/it8528e/include/ec/: intc.h  peci.h  pwm.h
tool/: Cargo.toml
tool/src/access/lpc/: linux.rs
