[package]
name = "purism_ectool"
version = "0.3.5"
edition = "2018"
description = "Purism Librem EC tool"
license = "MIT"
authors = ["Jeremy Soller <jeremy@system76.com>",
           "Nicole Faerber <nicole.faerber@puri.sm>",
           "Matt DeVillier <matt.devillier@puri.sm>"]
repository = "https://source.puri.sm/firmware/librem-ec"

[lib]
name = "ectool"

[[bin]]
name = "purism_ectool"
required-features = ["std", "hidapi", "clap"]

[dependencies]
clap = { version = "2", optional = true }
libc = { version = "0.2", optional = true }
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"], optional = true }
redox_hwio = { version = "0.1.3", optional = true }
downcast-rs = { version = "1.2.0", default-features = false }

[features]
default = ["std", "hidapi", "clap"]
std = ["libc", "downcast-rs/std"]

[package.metadata.docs.rs]
all-features = true
